--- a/package.json
+++ b/package.json
@@ -81,19 +81,21 @@
         "lint": "eslint src --ext ts",
         "watch": "tsc -watch -p ./",
         "pretest": "npm run compile && npm run lint",
-        "test": "node ./out/test/runTest.js"
+        "test": "node ./out/test/runTest.js",
+        "doc": "typedoc --mode modules --excludePrivate --readme none --excludeNotExported --excludePrivate --excludeProtected --stripInternal"
     },
     "devDependencies": {
         "@types/glob": "^7.1.3",
-        "@types/mocha": "^7.0.2",
+        "@types/mocha": "^8.0.3",
         "@types/node": "^14.6.0",
         "@types/vscode": "^1.46.0",
-        "@typescript-eslint/eslint-plugin": "^3.9.1",
-        "@typescript-eslint/parser": "^3.9.1",
+        "@typescript-eslint/eslint-plugin": "^4.0.1",
+        "@typescript-eslint/parser": "^4.0.1",
         "eslint": "^7.7.0",
         "glob": "^7.1.6",
         "mocha": "^8.1.1",
-        "typescript": "^3.9.7",
+        "typedoc": "^0.19.0",
+        "typescript": "^4.0.2",
         "vscode-test": "^1.4.0"
     }
 }
