Rework path handling to use vscode.Uri and allow the extension to run locally.
Fixes #6, I think.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
         "onCommand:file-browser.open"
     ],
     "main": "./out/extension.js",
+    "extensionKind": [
+        "workspace",
+        "ui"
+    ],
     "contributes": {
         "commands": [
             {
