requires too many keystrokes for the standard use-case Fixes #19
  * moved 'open as new file' to action menu.
  * The extension will be loaded after vsCode startsup.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publisher": "bodil",
     "displayName": "File Browser",
     "description": "A nicer alternative to the file open dialog.",
-    "version": "0.2.10",
+    "version": "0.2.12",
     "license": "LGPL-3.0+",
     "author": {
         "name": "Bodil Stokke",
@@ -25,6 +25,7 @@
         "Other"
     ],
     "activationEvents": [
+        "onStartupFinished",
         "onCommand:file-browser.open"
     ],
     "main": "./out/extension.js",
