--- a/package.json
+++ b/package.json
@@ -19,14 +19,10 @@
     ],
     "icon": "images/icon.png",
     "engines": {
-        "vscode": "^1.73.1"
+        "vscode": "^1.75"
     },
     "categories": [
         "Other"
-    ],
-    "activationEvents": [
-        "onCommand:file-browser.open",
-        "onCommand:file-browser.rename"
     ],
     "main": "./out/extension.js",
     "extensionKind": [
@@ -124,27 +120,28 @@
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
-        "lint": "eslint src --ext ts",
+        "lint": "eslint src",
         "watch": "tsc -watch -p ./",
-        "pretest": "npm run compile && npm run lint",
-        "test": "node ./out/test/runTest.js",
-        "doc": "typedoc --mode modules --excludePrivate --readme none --excludeNotExported --excludePrivate --excludeProtected --stripInternal"
+        "check": "npm run compile && npm run lint"
     },
     "devDependencies": {
-        "@types/glob": "^7.2.0",
-        "@types/mocha": "^10.0.0",
-        "@types/node": "^18.11.9",
-        "@types/vscode": "^1.73.1",
-        "@typescript-eslint/eslint-plugin": "^5.43.0",
-        "@typescript-eslint/parser": "^5.43.0",
-        "@vscode/test-electron": "^2.2.0",
-        "eslint": "^8.28.0",
-        "glob": "^7.2.3",
-        "mocha": "^10.1.0",
-        "typedoc": "^0.23.21",
-        "typescript": "^4.9.3"
+        "@eslint/js": "^9.11.1",
+        "@types/eslint__js": "^8.42.3",
+        "@types/glob": "^8.1.0",
+        "@types/mocha": "^10.0.8",
+        "@types/node": "^22.7.4",
+        "@types/vscode": "1.75.1",
+        "@typescript-eslint/eslint-plugin": "^8.8.0",
+        "@typescript-eslint/parser": "^8.8.0",
+        "@vscode/test-electron": "^2.4.1",
+        "eslint": "^9.11.1",
+        "glob": "^11.0.0",
+        "mocha": "^10.7.3",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.8.0"
     },
     "dependencies": {
-        "ignore": "^5.2.0"
+        "@bodil/opt": "^0.2.5",
+        "ignore": "^6.0.2"
     }
 }
